<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/white">

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_foreground"
                android:id="@+id/learnlogo"
                android:contentDescription="@string/app_logo"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textStyle="bold"
                android:id="@+id/title"
                android:textColor="@color/black"/>


    </android.support.v7.widget.LinearLayoutCompat>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_box_colour"
            android:id="@+id/email"
            android:ems="10"
            android:textAppearance="@style/txtGray"
            android:hint="@string/email_addre"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:lineSpacingExtra="6sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/text_box_colour"
            android:ems="10"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/verificationCode"
            android:hint="@string/enter_the_v"
            android:textAppearance="@style/txtGray"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:background="@drawable/bg"
            android:text="@string/next"
            android:textAppearance="@style/btnWhite"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationCode"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignIn"
            android:text="@string/rtn_user"
            android:textAppearance="@style/txtGray"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signUp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signIn"
            android:text="@string/sign_in"
            android:textAppearance="@style/txtBlue"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toEndOf="@id/txtSignIn"
            app:layout_constraintBottom_toTopOf="@id/signUp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dontAcc"
            android:text="@string/dontAcc"
            android:textAppearance="@style/txtGray"
            android:layout_marginBottom="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:text="@string/sign_up"
            android:layout_marginStart="3dp"
            android:textAppearance="@style/txtBlue"
            android:layout_marginBottom="31dp"
            app:layout_constraintStart_toEndOf="@id/dontAcc"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>