<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_foreground"
                android:id="@+id/learnlogo"
                android:contentDescription="@string/app_logo"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textStyle="bold"
                android:id="@+id/title"
                android:textColor="@color/black"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/text_box_colour"
            android:hint="@string/first_name"
            android:textAppearance="@style/txtGray"
            android:ems="10"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/text_box_colour"
            android:hint="@string/last_name"
            android:textAppearance="@style/txtGray"
            android:ems="10"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/lastname"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstname"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_box_colour"
            android:hint="@string/email_addre"
            android:textAppearance="@style/txtGray"
            android:ems="10"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastname"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:background="@drawable/bg"
            android:text="@string/next"
            android:textAppearance="@style/btnWhite"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rtSignIn"
            android:text="@string/rtn_user"
            android:textAppearance="@style/txtGray"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtVsignIn"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signIn"
            android:text="@string/sign_in"
            android:textAppearance="@style/txtBlue"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/rtSignIn"
            app:layout_constraintBottom_toBottomOf="@id/rtSignIn"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtVsignIn"
            android:text="@string/vsign_in"
            android:textAppearance="@style/txtGray"
            android:layout_marginBottom="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vsignIn"
            android:text="@string/sign_in"
            android:textAppearance="@style/txtBlue"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/txtVsignIn"
            app:layout_constraintBottom_toBottomOf="@id/txtVsignIn"/>


</android.support.constraint.ConstraintLayout>