<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


    <TextView
            android:text="@string/set_password"
            android:textAppearance="@style/txtHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setPass"
            android:textStyle="bold"
            android:layout_marginTop="160dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/set_a_new_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setPassHint"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/setPass"
            app:layout_constraintStart_toStartOf="@id/setPass"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/setPassHint"
            app:layout_constraintStart_toStartOf="@id/setPassHint">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_passw"
                android:textAppearance="@style/txtGray"
                android:background="@drawable/text_box_colour"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/pass1"
            app:layout_constraintStart_toStartOf="@id/pass1">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/re_enter_pa"
                android:textAppearance="@style/txtGray"
                android:background="@drawable/text_box_colour"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSetPass"
            android:background="@drawable/bg"
            android:text="@string/set_password"
            android:textAppearance="@style/btnWhite"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="@id/pass2"
            app:layout_constraintTop_toBottomOf="@id/pass2"/>
    <TextView
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skip"
            android:textAppearance="@style/txtBlue"
            android:layout_marginBottom="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>